base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ft-rest-service
  labels:
    app: ft-rest-service
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    app: ft-rest-service
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
